@@ -26,7 +26,7 @@ BUILDFLAGS += NOISY_BUILD=yes
 BUILDFLAGS += ASTDATADIR=/usr/share/asterisk ASTVARRUNDIR=/var/run/asterisk
 
 ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -g
+	ENABLE_DEBUG += --enable-dev-mode
 endif
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	INSTALL_PROGRAM += -s
@@ -62,22 +62,29 @@ config.status: configure
 
 	chmod 755 $(CURDIR)/debian/dummyprogs/fetch
 	
-	$(FETCH_ENV) ./configure \
-		--host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
-		--prefix=/usr \
-		--mandir=\$${prefix}/share/man \
-		--infodir=\$${prefix}/share/info \
-		--with-cap \
-		--with-gsm \
-		--with-imap=system \
-		--with-pwlib=/usr/share/pwlib/include/ \
-		--with-h323=/usr/share/openh323/ 
+	$(FETCH_ENV) ./configure			\
+		--host=$(DEB_HOST_GNU_TYPE)		\
+		--build=$(DEB_BUILD_GNU_TYPE)		\
+		--prefix=/usr				\
+		--mandir=\$${prefix}/share/man		\
+		--infodir=\$${prefix}/share/info	\
+		--with-cap				\
+		--with-gsm				\
+		--with-imap=system			\
+		--with-pwlib=/usr/share/pwlib/include/	\
+		--with-h323=/usr/share/openh323/ 	\
+		${ENABLE_DEBUG}
 
 build: build-arch build-indep
 
 build-arch: build-arch-stamp
 build-arch-stamp: config.status
 	dh_testdir
+	$(MAKE) menuselect.makeopts
+        @if [ "x${ENABLE_DEBUG}" != "x" ] ; then \
+		menuselect/menuselect --enable DONT_OPTIMIZE menuselect.makeopts ; \
+		menuselect/menuselect --enable DEBUG_THREADS menuselect.makeopts ; \
+	fi
 	$(FETCH_ENV) $(MAKE) $(BUILDFLAGS) h323-mak
 	$(FETCH_ENV) $(MAKE) $(BUILDFLAGS)
 	touch $@
